[gd_scene load_steps=2 format=3 uid="uid://blqf4r10vxsd3"]

[ext_resource type="Script" path="res://Components/detection_range_component.gd" id="1_gjvti"]

[node name="DetectionRangeComponent" type="Area2D"]
script = ExtResource("1_gjvti")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
